--- a/app/src/main/res/layout/include_top_bar.xml
+++ b/app/src/main/res/layout/include_top_bar.xml
@@ -10,7 +10,6 @@
         android:id="@+id/relativelayout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -62,7 +61,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:singleLine="true"
-            android:text=""
+            android:text="LoveDog"
             android:textColor="#333333"
             android:textSize="17dp" />
 
