--- a/app/src/main/res/layout/item_main_dog_list_layout.xml
+++ b/app/src/main/res/layout/item_main_dog_list_layout.xml
@@ -1,28 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ruffian.library.widget.RConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ruffian.library.widget.RConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="214dp"
-    app:background_normal="@color/white"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     android:layout_marginBottom="20dp"
+    app:background_normal="@color/white"
+    app:shadow_color="@color/color_22C36F28"
+    app:shadow_dx="3dp"
+    app:shadow_dy="3dp"
+    app:shadow_radius="1dp"
     app:corner_radius="16dp"
     tools:ignore="MissingDefaultResource">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/order_top_title">
+
+
+        <ImageView
+            android:id="@+id/dog_image_iv"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:src="@drawable/dog_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+
+        <TextView
+            android:id="@+id/dog_price_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="14dp"
+            android:text="Price:"
+            android:textColor="@color/color_222222"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/dog_image_iv"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/into_detail_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="13dp"
+            android:layout_marginBottom="20dp"
+            android:text=">>>"
+            android:textColor="@color/color_FF6E0F"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.ruffian.library.widget.RConstraintLayout
         android:id="@+id/order_top_title"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        app:background_normal="@color/color_2DD793"
         app:corner_radius_top_left="15dp"
         app:corner_radius_top_right="15dp"
-        app:background_normal="@color/color_2DD793"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
@@ -30,78 +84,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
+            android:paddingStart="20dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:paddingStart="20dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/order_state_icon"
-            />
-
-
-    </com.ruffian.library.widget.RConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/order_top_title"
-        >
-
-
-        <ImageView
-            android:id="@+id/dog_image_iv"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-
-
-        <TextView
-            android:id="@+id/dog_price_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_222222"
-            android:textSize="16sp"
-            android:layout_marginStart="30dp"
-            android:textStyle="bold"
-            android:layout_marginTop="14dp"
-            android:text="Price:"
-            app:layout_constraintStart_toEndOf="@+id/dog_image_iv"
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
-
-
-        <TextView
-            android:id="@+id/into_detail_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_FF6E0F"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:text=">>>"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="13dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </com.ruffian.library.widget.RConstraintLayout>
 
 
 </com.ruffian.library.widget.RConstraintLayout>
