--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <include
+       android:id="@+id/layout_top"
+       layout="@layout/include_top_bar" />
+
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dog_main_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/layout_top"
+       app:layout_constraintBottom_toBottomOf="parent"
        />
 </androidx.constraintlayout.widget.ConstraintLayout>
