--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <include
-       android:id="@+id/layout_top"
-       layout="@layout/include_top_bar" />
+    <com.homework.lovedog.widget.CurrencyRefreshLayout
+        android:id="@+id/refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_top">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/dog_main_list"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_marginTop="10dp"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/layout_top"
-       app:layout_constraintBottom_toBottomOf="parent"
-       />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dog_main_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.homework.lovedog.widget.CurrencyRefreshLayout>
+
+
+    <include
+        android:id="@+id/layout_top"
+        layout="@layout/include_top_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
