dog detail test

--- a/app/src/main/res/layout/activity_dog_info_layout.xml
+++ b/app/src/main/res/layout/activity_dog_info_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:id="@+id/dog_content_ll"
         android:layout_width="match_parent"
@@ -13,7 +14,64 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_bar_cl" />
+        app:layout_constraintTop_toBottomOf="@+id/top_bar_cl">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="160dp">
+
+            <com.ruffian.library.widget.RImageView
+                android:id="@+id/head_icon_riv"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="30dp"
+                app:corner_radius="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/head_icon_riv"
+                app:layout_constraintStart_toEndOf="@+id/head_icon_riv"
+                >
+
+                <TextView
+                    android:id="@+id/name_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/color_222222"
+                    />
+
+                <TextView
+                    android:id="@+id/nation_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_666666"
+                    android:layout_marginTop="8dp"
+                    android:textSize="14sp"
+                    />
+                <TextView
+                    android:id="@+id/life_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_666666"
+                    android:layout_marginTop="8dp"
+                    android:textSize="14sp"
+                    />
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </LinearLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_bar_cl"
@@ -23,20 +81,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.ruffian.library.widget.RTextView
-            android:id="@+id/back_rtv"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            app:icon_with_text="true"
-            app:icon_src_normal="@drawable/title_back_icon_up"
-            app:icon_height="18dp"
-            app:icon_width="18dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
@@ -45,6 +89,19 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.ruffian.library.widget.RTextView
+            android:id="@+id/back_rtv"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            app:icon_height="18dp"
+            app:icon_src_normal="@drawable/title_back_icon_up"
+            app:icon_width="18dp"
+            app:icon_with_text="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
