--- a/app/src/main/res/layout/activity_dog_info_layout.xml
+++ b/app/src/main/res/layout/activity_dog_info_layout.xml
@@ -20,6 +20,68 @@
             android:layout_width="match_parent"
             android:layout_height="160dp">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/head_icon_riv"
+                app:layout_constraintTop_toTopOf="@+id/head_icon_riv">
+
+                <TextView
+                    android:id="@+id/name_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_222222"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/nation_title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nation:"
+                        android:textColor="@color/color_333333"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/nation_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_666666"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/life_title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Life:"
+                    android:textColor="@color/color_333333"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/life_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_666666"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            </LinearLayout>
+
             <com.ruffian.library.widget.RImageView
                 android:id="@+id/head_icon_riv"
                 android:layout_width="80dp"
@@ -29,44 +91,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/head_icon_riv"
-                app:layout_constraintStart_toEndOf="@+id/head_icon_riv"
-                >
-
-                <TextView
-                    android:id="@+id/name_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/color_222222"
-                    />
-
-                <TextView
-                    android:id="@+id/nation_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_666666"
-                    android:layout_marginTop="8dp"
-                    android:textSize="14sp"
-                    />
-                <TextView
-                    android:id="@+id/life_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_666666"
-                    android:layout_marginTop="8dp"
-                    android:textSize="14sp"
-                    />
-
-            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
