--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -195,5 +195,5 @@
     <color name="color_FF500F">#FF500F</color>
     <color name="color_626262">#626262</color>
     <color name="color_FF750F">#FF750F</color>
-
+    <color name="color_F6F6F6">#F6F6F6</color>
 </resources>
