--- a/app/src/main/res/layout/activity_dog_info_layout.xml
+++ b/app/src/main/res/layout/activity_dog_info_layout.xml
@@ -91,8 +91,8 @@
 
             <com.ruffian.library.widget.RImageView
                 android:id="@+id/head_icon_riv"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginStart="30dp"
                 app:corner_radius="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -264,6 +264,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/color_666666"
+            android:layout_marginBottom="20dp"
             />
 
 
@@ -302,6 +303,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
