--- a/app/src/main/res/layout/item_main_dog_list_layout.xml
+++ b/app/src/main/res/layout/item_main_dog_list_layout.xml
@@ -49,8 +49,7 @@
             app:autoSizeTextType="uniform"
             app:layout_constrainedWidth="true"
             android:layout_marginStart="10dp"
-            android:singleLine="true"
-            android:ellipsize="end"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.105"
